fixed shadow on mobile and reverted button disabled on invalid forms

--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -50,7 +50,7 @@
   }
 
   &.btn-light {
-    @apply font-bold  border-secondary-gray dark:border-gray-800 bg-transparent rounded-full;
+    @apply font-bold  border-secondary-gray dark:border-gray-800 bg-white bg-opacity-50 dark:bg-transparent dark:bg-opacity-50 rounded-full;
     &:hover,
     &:focus {
       @apply dark:bg-gray-800 dark:border-gray-800 border-white;
